Add personal categories to practice decks (#48)
